--- a/client/public/index.html
+++ b/client/public/index.html
@@ -47,5 +47,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script src="https://cdnjs.com/libraries/bodymovin" type="text/javascript"></script>
 
 </html>
